# shop

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cart/: cart.py  context_processors.py  forms.py  views.py
cart/templates/cart/: detail.html
conf/: celery.py  settings.py  urls.py
coupons/: admin.py  forms.py  models.py  urls.py  views.py
coupons/migrations/: 0001_initial.py  0002_rename_avtive_coupon_active.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
orders/locale/en/LC_MESSAGES/: django.po
orders/locale/ru/LC_MESSAGES/: django.po
orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py  0004_alter_order_address_alter_order_city_and_more.py
orders/templates/admin/orders/order/: detail.html
orders/templates/orders/order/: create.html  pdf.html
payment/: tasks.py  urls.py  views.py  webhooks.py
payment/templates/payment/: process.html
shop/: admin.py  models.py  recommender.py  views.py
shop/migrations/: 0001_initial.py  0002_rename_update_product_updated.py  0002_translations.py
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
