[tool.poetry]
name = "shop"
version = "0.1.0"
description = "Shop"
authors = ["sudodebug <sudodebug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pillow = "^9.5.0"
celery = "5.2.7"
flower = "^2.0.0"
stripe = "^5.4.0"
weasyprint = "^59.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
